tests/ui/transmutability/arrays/should_require_well_defined_layout.stderr
error[E0277]: `[String; 0]` cannot be safely transmuted into `()`
  --> $DIR/should_require_well_defined_layout.rs:25:52
   |
LL |         assert::is_maybe_transmutable::<repr_rust, ()>();
   |                                                    ^^ analyzing the transmutability of `[String; 0]` is not yet supported
   |
note: required by a bound in `is_maybe_transmutable`
  --> $DIR/should_require_well_defined_layout.rs:12:14
   |
LL |       pub fn is_maybe_transmutable<Src, Dst>()
   |              --------------------- required by a bound in this function
LL |       where
LL |           Dst: TransmuteFrom<Src, {
   |  ______________^
LL | |             Assume::ALIGNMENT
LL | |                 .and(Assume::LIFETIMES)
LL | |                 .and(Assume::SAFETY)
LL | |                 .and(Assume::VALIDITY)
LL | |         }>
   | |__________^ required by this bound in `is_maybe_transmutable`

error[E0277]: `u128` cannot be safely transmuted into `[String; 0]`
  --> $DIR/should_require_well_defined_layout.rs:26:47
   |
LL |         assert::is_maybe_transmutable::<u128, repr_rust>();
   |                                               ^^^^^^^^^ analyzing the transmutability of `[String; 0]` is not yet supported
   |
note: required by a bound in `is_maybe_transmutable`
  --> $DIR/should_require_well_defined_layout.rs:12:14
   |
LL |       pub fn is_maybe_transmutable<Src, Dst>()
   |              --------------------- required by a bound in this function
LL |       where
LL |           Dst: TransmuteFrom<Src, {
   |  ______________^
LL | |             Assume::ALIGNMENT
LL | |                 .and(Assume::LIFETIMES)
LL | |                 .and(Assume::SAFETY)
LL | |                 .and(Assume::VALIDITY)
LL | |         }>
   | |__________^ required by this bound in `is_maybe_transmutable`

error[E0277]: `[String; 1]` cannot be safely transmuted into `()`
  --> $DIR/should_require_well_defined_layout.rs:31:52
   |
LL |         assert::is_maybe_transmutable::<repr_rust, ()>();
   |                                                    ^^ analyzing the transmutability of `[String; 1]` is not yet supported
   |
note: required by a bound in `is_maybe_transmutable`
  --> $DIR/should_require_well_defined_layout.rs:12:14
   |
LL |       pub fn is_maybe_transmutable<Src, Dst>()
   |              --------------------- required by a bound in this function
LL |       where
LL |           Dst: TransmuteFrom<Src, {
   |  ______________^
LL | |             Assume::ALIGNMENT
LL | |                 .and(Assume::LIFETIMES)
LL | |                 .and(Assume::SAFETY)
LL | |                 .and(Assume::VALIDITY)
LL | |         }>
   | |__________^ required by this bound in `is_maybe_transmutable`

error[E0277]: `u128` cannot be safely transmuted into `[String; 1]`
  --> $DIR/should_require_well_defined_layout.rs:32:47
   |
LL |         assert::is_maybe_transmutable::<u128, repr_rust>();
   |                                               ^^^^^^^^^ analyzing the transmutability of `[String; 1]` is not yet supported
   |
note: required by a bound in `is_maybe_transmutable`
  --> $DIR/should_require_well_defined_layout.rs:12:14
   |
LL |       pub fn is_maybe_transmutable<Src, Dst>()
   |              --------------------- required by a bound in this function
LL |       where
LL |           Dst: TransmuteFrom<Src, {
   |  ______________^
LL | |             Assume::ALIGNMENT
LL | |                 .and(Assume::LIFETIMES)
LL | |                 .and(Assume::SAFETY)
LL | |                 .and(Assume::VALIDITY)
LL | |         }>
   | |__________^ required by this bound in `is_maybe_transmutable`

error[E0277]: `[String; 2]` cannot be safely transmuted into `()`
  --> $DIR/should_require_well_defined_layout.rs:37:52
   |
LL |         assert::is_maybe_transmutable::<repr_rust, ()>();
   |                                                    ^^ analyzing the transmutability of `[String; 2]` is not yet supported
   |
note: required by a bound in `is_maybe_transmutable`
  --> $DIR/should_require_well_defined_layout.rs:12:14
   |
LL |       pub fn is_maybe_transmutable<Src, Dst>()
   |              --------------------- required by a bound in this function
LL |       where
LL |           Dst: TransmuteFrom<Src, {
   |  ______________^
LL | |             Assume::ALIGNMENT
LL | |                 .and(Assume::LIFETIMES)
LL | |                 .and(Assume::SAFETY)
LL | |                 .and(Assume::VALIDITY)
LL | |         }>
   | |__________^ required by this bound in `is_maybe_transmutable`

error[E0277]: `u128` cannot be safely transmuted into `[String; 2]`
  --> $DIR/should_require_well_defined_layout.rs:38:47
   |
LL |         assert::is_maybe_transmutable::<u128, repr_rust>();
   |                                               ^^^^^^^^^ analyzing the transmutability of `[String; 2]` is not yet supported
   |
note: required by a bound in `is_maybe_transmutable`
  --> $DIR/should_require_well_defined_layout.rs:12:14
   |
LL |       pub fn is_maybe_transmutable<Src, Dst>()
   |              --------------------- required by a bound in this function
LL |       where
LL |           Dst: TransmuteFrom<Src, {
   |  ______________^
LL | |             Assume::ALIGNMENT
LL | |                 .and(Assume::LIFETIMES)
LL | |                 .and(Assume::SAFETY)
LL | |                 .and(Assume::VALIDITY)
LL | |         }>
   | |__________^ required by this bound in `is_maybe_transmutable`

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0277`.
